# ijaw-voices--backend

./: .gitignore  db.sqlite3  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
authentication/: models.py  serializers.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_customuser_otp_code_customuser_otp_created_at_and_more.py  0003_alter_customuser_otp_code.py
main/: settings.py  urls.py
