[project]
name = "ijaw-voices-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.10",
    "django-cors-headers>=4.9.0",
    "drf-spectacular>=0.29.0",
    "python-dotenv>=1.2.1",
    "resend>=2.19.0",
]
